--- a/app.json
+++ b/app.json
@@ -31,9 +31,8 @@
     },
     "addons": [
       {
-        "plan": "heroku-postgresql",
-        "options": {
-          "version": "14"
+          "plan": "heroku-postgresql:essential-0",
+          "options": { "version": "16" }
         }
       },
       {
